Add basic logic of starting/finishing reading test

--- a/.eslintrc
+++ b/.eslintrc
@@ -61,6 +61,7 @@
       "error",
       "all"
     ],
+    "arrow-parens": "off",
     "object-curly-newline": "off",
     "react/require-default-props": "off",
     "no-unused-expressions": "off",
