--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.development.js",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.production.js"
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.production.js",
+    "eslint": "eslint ./source/ --ext .js,.jsx"
   },
   "repository": {
     "type": "git",
@@ -47,6 +48,7 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^3.23.0",
+    "core-js": "^3.6.4",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "ramda": "^0.26.1",
