--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^3.23.0",
+    "connected-react-router": "^6.6.1",
     "core-js": "^3.6.4",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
@@ -57,6 +58,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-act": "^1.7.7",
     "redux-thunk": "^2.3.0",
