--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "recharts": "^2.0.0-beta.1",
     "redux": "^4.0.5",
     "redux-act": "^1.7.7",
     "redux-thunk": "^2.3.0",
