--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "prop-types": "^15.7.2",
     "ramda": "^0.26.1",
     "react": "^16.12.0",
+    "react-animated-number": "^0.4.4",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
