--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "svg-inline-loader": "^0.8.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1",
@@ -61,6 +62,7 @@
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-share": "^4.0.1",
     "recharts": "^2.0.0-beta.1",
     "redux": "^4.0.5",
     "redux-act": "^1.7.7",
