--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@blueprintjs/core": "^3.23.0",
     "connected-react-router": "^6.6.1",
     "core-js": "^3.6.4",
+    "firebase": "^7.7.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "ramda": "^0.26.1",
