--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "connected-react-router": "^6.6.1",
     "core-js": "^3.6.4",
     "firebase": "^7.7.0",
+    "firebaseui": "^4.4.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "ramda": "^0.26.1",
