--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^3.23.0",
+    "classnames": "^2.2.6",
     "connected-react-router": "^6.6.1",
     "core-js": "^3.6.4",
     "firebase": "^7.7.0",
@@ -68,7 +69,7 @@
     "recharts": "^2.0.0-beta.1",
     "redux": "^4.0.5",
     "redux-act": "^1.7.7",
-    "redux-thunk": "^2.3.0",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.0.0"
   }
 }
