--- a/now.json
+++ b/now.json
@@ -1,3 +1,6 @@
 {
-  "rewrites": [{ "source": "/admin", "destination": "/" }]
+  "rewrites": [
+    { "source": "/admin", "destination": "/" },
+    { "source": "/signin", "destination": "/" }
+  ]
 }
