--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "core-js": "^3.6.4",
     "firebase": "^7.7.0",
     "normalize.css": "^8.0.1",
+    "normalizr": "^3.6.0",
     "prop-types": "^15.7.2",
     "ramda": "^0.26.1",
     "react": "^16.12.0",
