Update rewrites configuration

--- a/now.json
+++ b/now.json
@@ -1,5 +1,7 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/$1" }
+    { "source": "/admin", "destination": "/" },
+    { "source": "/signin", "destination": "/" },
+    { "source": "/results/:score", "destination": "/" }
   ]
 }
