--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.8.3",
+    "@babel/helper-compilation-targets": "^7.14.5",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-transform-destructuring": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
